; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_revision.c_log_rev_check.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/log2lines/extr_revision.c_log_rev_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i64 }
%struct.TYPE_3__ = type { i32 }

@LINESIZE = common dso_local global i32 0, align 4
@opt_SourcesPath = common dso_local global i32 0, align 4
@revinfo = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@.str = private unnamed_addr constant [32 x i8] c"| R--- %s Last Changed Rev: %d\0A\00", align 1
@opt_Revision_check = common dso_local global i64 0, align 8
@summ = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@.str.1 = private unnamed_addr constant [49 x i8] c"| R--- Conflict %s: source tree(%d) < build(%d)\0A\00", align 1
@.str.2 = private unnamed_addr constant [42 x i8] c"| R--- Conflict %s: file(%d) > build(%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32)* @log_rev_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_rev_check(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %10 = load i32, i32* @LINESIZE, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %8, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %9, align 8
  %14 = load i32, i32* @opt_SourcesPath, align 4
  %15 = call i32 @strcpy(i8* %13, i32 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @strcat(i8* %13, i8* %16)
  %18 = call i32 @getRevision(i8* %13, i32 1)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %3
  %22 = getelementptr inbounds i8, i8* %13, i64 0
  store i8 0, i8* %22, align 16
  br label %23

23:                                               ; preds = %21, %3
  %24 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @revinfo, i32 0, i32 2), align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %23
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i32 (i32*, i8*, i8*, i32, ...) @log(i32* %27, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %13, i32 %28)
  br label %30

30:                                               ; preds = %26, %23
  %31 = load i32, i32* %7, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %60

33:                                               ; preds = %30
  %34 = load i64, i64* @opt_Revision_check, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %60

36:                                               ; preds = %33
  %37 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @revinfo, i32 0, i32 0), align 8
  %38 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @revinfo, i32 0, i32 1), align 4
  %39 = icmp slt i32 %37, %38
  br i1 %39, label %40, label %47

40:                                               ; preds = %36
  %41 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @summ, i32 0, i32 0), align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @summ, i32 0, i32 0), align 4
  %43 = load i32*, i32** %4, align 8
  %44 = load i32, i32* %7, align 4
  %45 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @revinfo, i32 0, i32 1), align 4
  %46 = call i32 (i32*, i8*, i8*, i32, ...) @log(i32* %43, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i8* %13, i32 %44, i32 %45)
  br label %59

47:                                               ; preds = %36
  %48 = load i32, i32* %7, align 4
  %49 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @revinfo, i32 0, i32 1), align 4
  %50 = icmp sgt i32 %48, %49
  br i1 %50, label %51, label %58

51:                                               ; preds = %47
  %52 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @summ, i32 0, i32 0), align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @summ, i32 0, i32 0), align 4
  %54 = load i32*, i32** %4, align 8
  %55 = load i32, i32* %7, align 4
  %56 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @revinfo, i32 0, i32 1), align 4
  %57 = call i32 (i32*, i8*, i8*, i32, ...) @log(i32* %54, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.2, i64 0, i64 0), i8* %13, i32 %55, i32 %56)
  br label %58

58:                                               ; preds = %51, %47
  br label %59

59:                                               ; preds = %58, %40
  br label %60

60:                                               ; preds = %59, %33, %30
  %61 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %61)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strcpy(i8*, i32) #2

declare dso_local i32 @strcat(i8*, i8*) #2

declare dso_local i32 @getRevision(i8*, i32) #2

declare dso_local i32 @log(i32*, i8*, i8*, i32, ...) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
